--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/Marina093/frontend-project-46#readme",
   "dependencies": {
-    "commander": "^9.5.0"
+    "commander": "^9.5.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^8.31.0",
