--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Marina093/frontend-project-46#readme",
   "dependencies": {
+    "@jest/globals": "^29.5.0",
     "commander": "^9.5.0",
     "lodash": "^4.17.21"
   },
