--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Marina093/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/Marina093/frontend-project-46/actions)",
+  "description": "Difference calculator",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
